--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,6 @@ img {
 
 .container {
   width: 100%;
-  max-width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
 }
@@ -260,18 +259,16 @@ img {
 }
 
 .solution-list {
-  position: relative;
-  width: 100%;
+  /* position: relative;
+  width: 100%; */
 }
 
 .icon-solution {
   width: 264px;
   height: 112px;
-  flex-shrink: 0;
   border-radius: 4px;
   border: 1px solid #8e8f99;
   background: #f4f4fd;
-  display: flex;
   align-items: center;
   justify-content: center;
   margin-bottom: 8px;
@@ -841,14 +838,53 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 768px) {
   .container {
-    max-width: 320px;
+    max-width: 1157px;
+  }
+
+  .solution-menu {
+    gap: 72px 24px;
+  }
+
+  .solution-list {
+    width: calc((100% - 48px) / 2);
+  }
+
+  .solution-list-item {
+    text-align: left;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1158px) {
   .container {
-    max-width: 736px;
+    max-width: 1440px;
+  }
+
+  .solution {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+
+  .solution-menu {
+    flex-wrap: nowrap;
+    gap: 24px;
+  }
+
+  .solution-cover {
+    width: 264px;
+  }
+
+  .solution-list {
+    width: calc((100% - 72px) / 4);
+  }
+
+  .icon-solution {
+    display: flex;
+  }
+
+  .solution-list-item {
+    text-align: left;
+    font-weight: 500;
   }
 }
