--- a/css/styles.css
+++ b/css/styles.css
@@ -258,9 +258,8 @@ img {
   gap: 72px;
 }
 
-.solution-list {
-  /* position: relative;
-  width: 100%; */
+.solution-cover {
+  width: 288px;
 }
 
 .icon-solution {
@@ -298,8 +297,8 @@ img {
 
 .team {
   background-color: #f4f4fd;
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 
 .team-img {
@@ -323,11 +322,15 @@ img {
 
 .team-list {
   display: flex;
-  gap: 24px;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
+  gap: 72px;
 }
 
 .team-item {
-  width: calc((100% - 24px * 3) / 4);
+  width: 264px;
+  /* width: calc((100% - 24px * 3) / 4); */
 }
 
 .team-list-item {
@@ -409,11 +412,12 @@ img {
 .digest-menu {
   display: flex;
   flex-wrap: wrap;
-  gap: 48px 24px;
+  flex-direction: column;
+  gap: 48px;
 }
 
 .digest-item {
-  width: calc((100% - 24px * 2) / 3);
+  /* width: calc((100% - 24px * 2) / 3); */
 }
 
 .digest-item:hover .digest-cover {
@@ -854,6 +858,12 @@ img {
   .solution-list-item {
     text-align: left;
   }
+
+  .team-list {
+    flex-direction: row;
+    justify-content: center;
+    gap: 64px 24px;
+  }
 }
 
 @media screen and (min-width: 1158px) {
@@ -886,5 +896,15 @@ img {
   .solution-list-item {
     text-align: left;
     font-weight: 500;
+  }
+
+  .solution-text {
+    font-weight: 400;
+  }
+
+  .team-list {
+    flex-direction: row;
+    justify-content: center;
+    gap: 24px;
   }
 }
