--- a/css/styles.css
+++ b/css/styles.css
@@ -55,9 +55,11 @@ img {
 }
 
 .container {
-  width: 100%;
-  padding: 0 16px;
-  margin: 0 auto;
+  max-width: 320px;
+  padding-left: 16px;
+  padding-right: 16px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* ========= header ========= */
@@ -193,6 +195,24 @@ img {
   align-items: center;
 }
 
+.header-close-btn {
+  background-color: rgba(231, 233, 252, 0.25);
+  border: 1px solid #0000001a;
+  border-radius: 50%;
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  padding: 0;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 /*===== mob-menu =====*/
 
 .mob-menu {
@@ -206,15 +226,11 @@ img {
   padding: 24px 24px 40px 16px;
   display: flex;
   flex-direction: column;
-}
-
-.header-close-btn {
-  display: block;
-  margin-left: auto;
-  margin-bottom: 24px;
-  background: none;
-  border: none;
   justify-content: space-between;
+  overflow: auto;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: auto;
 }
 
 .mob-menu-item:not(:last-child) {
@@ -229,12 +245,9 @@ img {
   letter-spacing: 0.02em;
   text-transform: capitalize;
 }
-.mob-list {
-}
+
 .mob-list-item:not(:last-child) {
   margin-bottom: 24px;
-}
-.mob-address-link {
 }
 
 .mob-social {
@@ -557,21 +570,23 @@ img {
 
 .crypt {
   background-color: #2e2f42;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 97.5px;
+  padding-bottom: 96px;
   display: flex;
-  align-items: baseline;
 }
 .crypt-cover {
   display: flex;
-  align-items: baseline;
+  flex-direction: column;
 }
 
 .crypt-first {
-  margin-right: 120px;
+  width: 288px;
+  text-align: center;
+  margin-bottom: 72px;
 }
 
 .footer-logo {
+  display: inline-block;
   color: #4d5ae5;
   font-family: "Raleway", sans-serif;
   font-size: 18px;
@@ -580,7 +595,6 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   margin-bottom: 16px;
-  display: inline-block;
 }
 
 .footer-logo-accent {
@@ -596,7 +610,7 @@ img {
 
 .container-text {
   display: flex;
-  max-width: 264px;
+  max-width: 288px;
 }
 
 .footer-logo-text {
@@ -607,21 +621,29 @@ img {
   letter-spacing: 0.02em;
 }
 
-.crypt-second {
-  margin-right: 80px;
-}
-
 .social-title {
+  text-align: center;
+  color: #ffffff;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #ffffff;
   margin-bottom: 16px;
 }
+
+.social-cript {
+  display: flex;
+  gap: 16px;
+  justify-content: center;
+  margin-bottom: 72px;
+}
+
 .footer-form {
   display: flex;
-  gap: 24px;
+  flex-direction: column;
+  gap: 16px;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer-form-input {
@@ -661,16 +683,11 @@ img {
   align-items: center;
 }
 
+/* -----footer-icon---- */
+
 .footer-icon-flyer {
   fill: #f4f4fd;
   margin-left: 16px;
-}
-
-/* -----footer-icon---- */
-
-.social-cript {
-  display: flex;
-  gap: 16px;
 }
 
 .link-crypt:hover,
@@ -701,7 +718,7 @@ img {
 }
 
 .modal {
-  width: 408px;
+  width: 288px;
   min-height: 584px;
   border-radius: 4px;
   background-color: #fcfcfc;
@@ -715,6 +732,7 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+/* rgba(231, 233, 252, 1) */
 .modal-close-btn {
   background-color: #e7e9fc;
   border: 1px solid #0000001a;
@@ -902,9 +920,25 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+/* ------media-tab----- */
+
 @media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
+  }
+
+  .heder-menu {
+    display: flex;
+  }
+
+  .header-list {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+  }
+
+  .header-open-btn {
+    display: none;
   }
 
   .slogan {
@@ -961,11 +995,41 @@ img {
   .digest-item {
     width: calc((100% - 24px) / 2);
   }
+
+  .crypt-cover {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 0 164px 0 108px;
+  }
+
+  .container-text,
+  .social-title {
+    text-align: left;
+  }
+
+  .footer-form {
+    flex-direction: row;
+    gap: 24px;
+  }
+
+  .modal {
+    width: 408px;
+  }
 }
+
+/* ------media-desk----- */
 
 @media screen and (min-width: 1158px) {
   .container {
     max-width: 1158px;
+    padding: 0 15px;
+  }
+
+  .header-list {
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
   }
 
   .slogan {
@@ -1038,5 +1102,24 @@ img {
 
   .digest-menu {
     gap: 48px 24px;
+  }
+
+  .crypt {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    align-items: baseline;
+  }
+
+  .crypt-cover {
+    flex-wrap: nowrap;
+    align-items: baseline;
+  }
+
+  .crypt-first {
+    margin-right: 120px;
+  }
+
+  .crypt-second {
+    margin-right: 80px;
   }
 }
