--- a/css/styles.css
+++ b/css/styles.css
@@ -603,7 +603,7 @@ img {
 
 .crypt-first {
   width: 288px;
-  text-align: center;
+  text-align: left;
   margin-bottom: 72px;
 }
 
@@ -1020,6 +1020,10 @@ img {
     gap: 64px 24px;
   }
 
+  .social {
+    justify-content: center;
+  }
+
   .digest-menu {
     display: flex;
     flex-wrap: wrap;
@@ -1035,7 +1039,8 @@ img {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    padding: 0 164px 0 108px;
+    width: 584px;
+    gap: 72px 24px;
   }
 
   .container-text,
