--- a/css/styles.css
+++ b/css/styles.css
@@ -966,7 +966,6 @@ img {
 
   .address-link {
     font-size: 12px;
-    font-weight: 400;
     line-height: 1.17;
   }
 
@@ -1075,6 +1074,11 @@ img {
     display: flex;
     flex-direction: row;
     gap: 40px;
+  }
+
+  .address-link {
+    font-size: 16px;
+    line-height: 1.5;
   }
 
   .slogan {
