--- a/css/styles.css
+++ b/css/styles.css
@@ -65,8 +65,6 @@ img {
 /* ========= header ========= */
 
 .header {
-  padding-top: 17.5px;
-  padding-bottom: 17.5px;
   background: #ffffff;
   border-bottom: 1px solid #e7e9fc;
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
@@ -273,13 +271,15 @@ img {
   color: #434455;
 }
 
-.mob-list-item:not(:last-child) {
+.mob-list-item {
   margin-bottom: 24px;
 }
 
 .mob-social {
   justify-content: space-between;
   margin-top: 48px;
+  display: flex;
+  gap: 24px;
 }
 
 /*===== slogan =====*/
@@ -508,8 +508,8 @@ img {
 
 .portfolio {
   background-color: #ffffff;
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 
 .digest-menu {
@@ -604,8 +604,7 @@ img {
 
 .crypt-first {
   width: 288px;
-  text-align: left;
-  margin-bottom: 72px;
+  text-align: center;
 }
 
 .footer-logo {
@@ -642,10 +641,6 @@ img {
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
-}
-
-.crypt-second {
-  margin-bottom: 72px;
 }
 
 .social-title {
@@ -909,6 +904,7 @@ img {
 
 .check-text-box {
   display: inline-flex;
+  flex-shrink: 0;
   width: 16px;
   height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
@@ -1035,6 +1031,10 @@ img {
     width: calc((100% - 24px) / 2);
   }
 
+  .crypt-first {
+    text-align: left;
+  }
+
   .crypt-cover {
     display: flex;
     flex-direction: row;
@@ -1082,6 +1082,7 @@ img {
   }
 
   .slogan {
+    padding: 188px 0;
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
@@ -1132,6 +1133,11 @@ img {
 
   .solution-text {
     font-weight: 400;
+  }
+
+  .portfolio {
+    padding-top: 120px;
+    padding-bottom: 120px;
   }
 
   .team-list {
