--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,8 @@ img {
 .header-container {
   display: flex;
   align-items: center;
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
 
 .header-navi {
@@ -947,6 +949,11 @@ img {
 @media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
+  }
+
+  .header-container {
+    padding-top: 0;
+    padding-bottom: 0;
   }
 
   .heder-menu {
